--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Vite + TS</title>
   </head>
   <body>
+    <button id="newGame">New game</button>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
