--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       </p>
       <button id="newGame">New game</button>
       <div class="app" id="app"></div>
+      <div id="code"></div>
     </div>
     <p class="footer">*No AI was used in the making of this 🙂</p>
     <script type="module" src="/src/main.ts"></script>
